--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "node --env-file=.env --watch-path ./src src/server.js",
-    "setup": "node --env-file=.env ./src/setup.js"
+    "dev": "node src/server.js",
+    "setup": "node ./src/setup.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "pg": "^8.13.1"
