--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
-    "pg": "^8.13.1"
+    "helmet": "^8.0.0",
+    "pg": "^8.13.1",
+    "xss": "^1.0.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
