--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.21.2",
     "helmet": "^8.0.0",
     "pg": "^8.13.1",
+    "serverless-http": "^3.2.0",
     "xss": "^1.0.15"
   },
   "devDependencies": {
