--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "node src/server.js",
     "setup": "node ./src/setup.js",
-    "test": "jest"
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
   "keywords": [],
   "author": "",
@@ -25,7 +27,7 @@
     "@eslint/js": "^9.19.0",
     "eslint": "^9.19.0",
     "globals": "^15.14.0",
-    "jest": "^29.7.0",
-    "supertest": "^7.0.0"
+    "supertest": "^6.3.4",
+    "vitest": "^1.4.0"
   }
 }
